tests/NormalTests/paczka2/big_fuzzy/37980927.err
Error in line 1: P0GAvIm S742 76,6
Error in line 3: P0GAvIm A416 46,1
Error in line 4: P0GAvIm S742 34,4
Error in line 8: P0GAvIm S42 8,9
Error in line 14: orpKswl A416 196,8
Error in line 16: P0GAvIm S742 6,3
Error in line 18: S42 S42 94,6
Error in line 40: 7FsrcK2gk A416 38,3
Error in line 47: oEPfQKB A127 61,7
Error in line 45: orpKswl S42 432,3
Error in line 61: orpKswl A416 1,8
Error in line 72: S42 A416 70,1
Error in line 39: P0GAvIm A127 44,3
Error in line 90: orpKswl S42 21,0
Error in line 109: 7FsrcK2gk A127 85,3
Error in line 113: iByPieFB S742 41,8
Error in line 116: orpKswl A127 6,1
Error in line 71: OJ6z4V A416 75,1
Error in line 121: OJ6z4V S42 89,4
Error in line 123: 7FsrcK2gk S742 206,0
Error in line 133: 7FsrcK2gk S42 82,9
Error in line 143: iByPieFB S742 85,0
Error in line 148: OJ6z4V S42 49,9
Error in line 149: orpKswl S42 87,3
Error in line 155: orpKswl S742 93,2
Error in line 161: orpKswl A416 9,0
Error in line 164: orpKswl A127 48,0
Error in line 175: orpKswl S742 41,9
Error in line 180: orpKswl A127 45,2
Error in line 177: OJ6z4V A416 90,7
Error in line 183: S42 S42 -1,2
Error in line 168: 7FsrcK2gk S742 45,5
Error in line 189: S42 S742 |5,0
Error in line 194: 7FsrcK2gk A127 83,4
Error in line 173: S42 S42 12,8
Error in line 200: S42 A416 57,9
Error in line 198: iByPieFB S742 42,1
Error in line 192: OJ6z4V S742 48,8
Error in line 203: iByPieFB S42 32,8
Error in line 212: iByPieFB &416 46,9
Error in line 206: 7FsrcK2gk A127 81,5
Error in line 211: iByPieFB A127 17,3
Error in line 219: P0GAvIm A127 -2,1
Error in line 218: iByPieFB S742 7,9
Error in line 234: oEPfQKB A416 3,0
Error in line 244: iByPieFB S742 49,7
